--- a/styles/typography.css
+++ b/styles/typography.css
@@ -160,8 +160,8 @@ h2 {
     max-width: 4rem;
     max-height: 12rem;
 
-    margin-top: 12rem;
-    margin-bottom: 12rem;
+    margin-top: 14rem;
+    margin-bottom: 14rem;
     text-align: center;
     padding: 0 1rem 0 1rem;
     border-radius: 0 10px 10px 0;
@@ -183,6 +183,8 @@ h2 {
         left: 3rem;
         padding-right: 0.3rem;
         padding-left: 0.3rem;
+        margin-top: 12rem;
+        margin-bottom: 12rem;
         min-width: 3.7rem;
         max-height: 7rem;
     }
